--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-remark": "2.1.7",
     "gatsby-transformer-sharp": "2.1.3",
     "polished": "2.2.0",
+    "randomcolor": "^0.5.3",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
